--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "kriswallsmith/assetic": "1.2.*@dev",
         "symfony/assetic-bundle": "2.5.*@dev",
         "monolog/monolog": "1.11.*@dev",
-        "doctrine/doctrine-fixtures-bundle": "2.2.*"
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+        "nelmio/alice": "~1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
