--- a/src/Blog/NewsBundle/DataFixtures/ORM/advertisement.yml
+++ b/src/Blog/NewsBundle/DataFixtures/ORM/advertisement.yml
@@ -1,9 +1,6 @@
 Blog\NewsBundle\Entity\Advertisement:
-    category_id: <numberBetween(23, 42)>
-    moderator_id: <numberBetween(25, 27)>
-    title: <newTitle()>
-    content: <newContent()>
-    createdDate: <dateTime()>
-#    title: Title1
-#    content: kfjsdfasjfiojdfiajdijfa
-#    createdDate: <dateTime()>
+    advertisement{1..10}:
+        title: <newTitle()>
+        content: <newContent()>
+        createdDate: <dateTime()>
+
