--- a/src/Blog/NewsBundle/Resources/config/routing.yml
+++ b/src/Blog/NewsBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 home:
     path:       /
     defaults:   { _controller: BlogNewsBundle:Index:index }
+
+contact:
+    path:       /contact
+    defaults:   { _controller: BlogNewsBundle:Index:contact }
