add doctrine extensions (Sluggable and Timestampable) to entities: Advertisement - slug, created, updated; Category - slug; Comment - slug, created, updated; User - slug, created, updated;

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -46,3 +46,8 @@ assetic:
 
 #swiftmailer:
 #    delivery_address: me@example.com
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable:    true
+            timestampable: true
