--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "doctrine/doctrine-fixtures-bundle": "2.2.*",
         "nelmio/alice": "~1.7",
         "stof/doctrine-extensions-bundle": "~1.1",
-        "gedmo/doctrine-extensions": "2.3.*@dev"
+        "doctrine/migrations": "1.0.*@dev",
+        "doctrine/doctrine-migrations-bundle": "2.1.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
