some tests, in working

--- a/src/Blog/NewsBundle/Resources/config/routing.yml
+++ b/src/Blog/NewsBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ contact:
 advert_form:
     path:       /advert_form
     defaults:   { _controller: BlogNewsBundle:Index:advertForm }
+
+createAdvertisement:
+    path:       /create_advert
+    defaults:   { _controller: BlogNewsBundle:Index:createAdvertisement }
