add first simple services

--- a/src/Blog/NewsBundle/Resources/config/routing.yml
+++ b/src/Blog/NewsBundle/Resources/config/routing.yml
@@ -13,3 +13,7 @@ advert_form:
 createAdvertisement:
     path:       /create_advert
     defaults:   { _controller: BlogNewsBundle:Index:createAdvertisement }
+
+service:
+    path:       /service
+    defaults:   { _controller: BlogNewsBundle:Service:index }
