--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: config.yml }
+    - { resource: "@BlogNewsBundle/Resources/config/services.xml" }
 
 framework:
     router:
