using mail service

--- a/src/Blog/NewsBundle/Resources/config/routing.yml
+++ b/src/Blog/NewsBundle/Resources/config/routing.yml
@@ -17,3 +17,7 @@ createAdvertisement:
 service:
     path:       /service
     defaults:   { _controller: BlogNewsBundle:Service:index }
+
+sendEmail:
+    path:       /send
+    defaults:   { _controller: BlogNewsBundle:Service:send }
