add first service CommentRepository, get comments

--- a/src/Blog/NewsBundle/Resources/config/routing.yml
+++ b/src/Blog/NewsBundle/Resources/config/routing.yml
@@ -21,3 +21,7 @@ service:
 sendEmail:
     path:       /send
     defaults:   { _controller: BlogNewsBundle:Service:send }
+
+all_comments:
+    path:       /comment
+    defaults:   { _controller: BlogNewsBundle:Service:comment }
