add advertisement form type service

--- a/src/Blog/NewsBundle/Resources/config/routing.yml
+++ b/src/Blog/NewsBundle/Resources/config/routing.yml
@@ -32,4 +32,4 @@ categories:
 
 category_show:
     path:       /categories/{slug}
-    defaults:   { _controller: BlogNewsBundle:Category:showCategory
+    defaults:   { _controller: BlogNewsBundle:Category:showCategory }
