--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -7,6 +7,7 @@ framework:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
         strict_requirements: true
     profiler: { only_exceptions: false }
+    validation:      { enable_annotations: true }
 
 web_profiler:
     toolbar: true
