--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -8,6 +8,7 @@ framework:
         strict_requirements: true
     profiler: { only_exceptions: false }
     validation:      { enable_annotations: true }
+    translator: { fallback: en }
 
 web_profiler:
     toolbar: true
