add new bundle UseRestBundle for REST

--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -19,3 +19,8 @@ _main:
 
 blog:
     resource: "@BlogNewsBundle/Resources/config/routing.yml"
+
+rest:
+    resource: "@RestUseRestBundle/Resources/config/routing.yml"
+
+
