--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_rest:
+    format_listener:
+        prefer_extension:         false
+    view:
+        view_response_listener:   true
