--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "nelmio/alice": "~1.7",
         "stof/doctrine-extensions-bundle": "~1.1",
         "doctrine/migrations": "1.0.*@dev",
-        "doctrine/doctrine-migrations-bundle": "2.1.*@dev"
+        "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
+        "jms/serializer-bundle": "0.13.*@dev",
+        "friendsofsymfony/rest-bundle": "1.5.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
