--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,6 +74,7 @@ swiftmailer:
 
 fos_rest:
     format_listener:
-        prefer_extension:         false
+            rules:
+                - prefer_extension:         false
     view:
         view_response_listener:   true
