--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,8 +73,12 @@ swiftmailer:
     spool:     { type: memory }
 
 fos_rest:
-    format_listener:
-            rules:
-                - prefer_extension:         false
+    format_listener:  true
+    routing_loader:
+        default_format: json
     view:
         view_response_listener:   true
+        formats:
+            json: true
+            xml: true
+            yml: true
