add crud for advertisements(news)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,3 +87,9 @@ fos_rest:
             json: true
             xml: true
             yml: true
+
+services:
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
