--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,7 +5,7 @@ imports:
 
 framework:
     #esi:             ~
-    translator:      { fallback: "en" }
+    translator:      ~
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -93,3 +93,8 @@ services:
         class: Twig_Extensions_Extension_Text
         tags:
             - { name: twig.extension }
+
+fos_user:
+    db_driver:      orm
+    firewall_name:  main
+    user_class:     Blog\UserBundle\Entity\FOSUser
