--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "doctrine/migrations": "1.0.*@dev",
         "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
         "jms/serializer-bundle": "0.13.*@dev",
-        "friendsofsymfony/rest-bundle": "1.5.*@dev"
+        "friendsofsymfony/rest-bundle": "1.5.*@dev",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
